[package]
name        = "turborag-sdk"
version     = "1.0.0"
edition     = "2021"
description = "Rust client SDK for the TurboRag REST API"
license     = "MIT"

[dependencies]
reqwest  = { version = "0.12", features = ["json"] }
serde    = { version = "1",    features = ["derive"] }
serde_json = "1"
tokio    = { version = "1",    features = ["full"] }
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }

[[example]]
name = "basic"
path = "examples/basic.rs"
